--- a/assets/css/blog-page-css/blog.scss
+++ b/assets/css/blog-page-css/blog.scss
@@ -29,9 +29,10 @@ $colorBlack: #121619;
 }
 
 .main-section {
+  display: flex;
   padding: 100px 330px;
   .main-section-left-column {
-    h2{
+    h2 {
       font-size: 22px;
     }
     .left-column-input {
@@ -45,61 +46,153 @@ $colorBlack: #121619;
       }
       i {
         position: absolute;
-        top: 50%; 
-        left:220px; 
+        top: 50%;
+        left: 220px;
         transform: translateY(-50%);
         color: rgb(170, 170, 170);
       }
     }
-    ul{
+    ul {
       padding: 20px 0px;
-      li{
+      li {
         padding: 20px 0px;
         color: gray;
         font-size: 13px;
         width: 20%;
         cursor: pointer;
         border-top: 1px solid rgb(210, 210, 210);
-        transition: .5s all ;
-        &:last-child{
+        transition: 0.5s all;
+        &:last-child {
           border-bottom: 1px solid rgb(210, 210, 210);
         }
-        &:hover{
+        &:hover {
           color: $colorOrange;
         }
       }
     }
-    .recent-tab{
+    .recent-tab {
       padding: 20px 0px;
-      .recent-tab-content{
+      .recent-tab-content {
         padding: 15px 0px;
         cursor: pointer;
         display: flex;
         flex-direction: row;
-        img{
-          transition: .5s;
-          &:hover{
+        img {
+          transition: 0.5s;
+          &:hover {
             scale: 1.15;
           }
         }
-        .recent-tab-content-text{
+        .recent-tab-content-text {
           display: flex;
           flex-direction: column;
           justify-content: center;
-          p,span{
+          p,
+          span {
             padding: 5px 10px;
             color: $colorOrange;
             font-size: 14px;
             width: 200px;
           }
-          span{
+          span {
             color: $colorBlack;
             font-weight: 700;
           }
         }
       }
     }
+    .tag-content {
+      padding: 30px 0px;
+      display: flex;
+      flex-wrap: wrap;
+      width: 210px;
+
+      span {
+        text-align: center;
+        border: 1px solid rgb(207, 207, 207);
+        margin: 0px 5px;
+        color: gray;
+        font-size: 15px;
+        padding: 8px;
+        cursor: pointer;
+        transition: 0.5s all;
+        margin-top: 10px;
+        &:hover {
+          background-color: #fd9d3e;
+          color: white;
+        }
+      }
+    }
+  }
+  .main-section-right-column {
+    .navigation-bottom-buttons{
+      button{
+        padding: 12px;
+        background-color: #121619;
+        color: white;
+        cursor: pointer;
+        transition: .5s all;
+        &:hover{
+          scale: 1.1;
+        }
+      }
+      .bottom-btn{
+        margin-left: 7px;
+        background-color: white;
+        color: rgb(128, 128, 128);
+        border: 1px solid rgb(160, 160, 160) ;
+        &:hover{
+          border: 1px solid $colorBlack ;
+        }
+      }
+
+
+    }
+    padding: 0px 50px;
+    display: flex;
+    flex-direction: column;
+    .right-column-blog-box {
+      padding: 30px 0px;
+      .writer-text {
+        display: flex;
+        span {
+          font-size: 13px;
+          margin: 15px 0px;
+          &:nth-child(2) {
+            margin-left: 10px;
+          }
+        }
+      }
+      .writer-comment {
+        h1 {
+          font-size: 25px;
+          transition: 0.3s;
+          cursor: pointer;
+          &:hover {
+            color: $colorOrange;
+          }
+        }
+        .writer-comment-spans {
+          display: flex;
+          flex-direction: column;
+
+          span {
+            color: rgb(160, 160, 160);
+            font-size: 14px;
+            margin-top: 10px;
+            &:nth-child(2) {
+              color: $colorOrange;
+              text-decoration: underline;
+              cursor: pointer;
+              font-size: 12px;
+              transition: .4s;
+              &:hover {
+                color: black;
+              }
+            }
+          }
+        }
+      }
+    }
   }
 }
-
-
