--- a/assets/css/blog-page-css/blog.css
+++ b/assets/css/blog-page-css/blog.css
@@ -27,7 +27,11 @@
 
 .main-section {
   display: flex;
-  padding: 100px 330px;
+  padding: 100px 0px;
+  justify-content: center;
+}
+.main-section .main-section-left-column {
+  width: 350px;
 }
 .main-section .main-section-left-column h2 {
   font-size: 22px;
@@ -120,7 +124,7 @@
   color: white;
 }
 .main-section .main-section-right-column {
-  padding: 0px 50px;
+  width: 900px;
   display: flex;
   flex-direction: column;
 }
