--- a/assets/css/blog-page-css/blog.scss
+++ b/assets/css/blog-page-css/blog.scss
@@ -30,8 +30,10 @@ $colorBlack: #121619;
 
 .main-section {
   display: flex;
-  padding: 100px 330px;
+  padding: 100px 0px;
+  justify-content: center;
   .main-section-left-column {
+    width: 350px;
     h2 {
       font-size: 22px;
     }
@@ -125,30 +127,28 @@ $colorBlack: #121619;
     }
   }
   .main-section-right-column {
-    .navigation-bottom-buttons{
-      button{
+    width: 900px;
+    .navigation-bottom-buttons {
+      button {
         padding: 12px;
         background-color: #121619;
         color: white;
         cursor: pointer;
-        transition: .5s all;
-        &:hover{
+        transition: 0.5s all;
+        &:hover {
           scale: 1.1;
         }
       }
-      .bottom-btn{
+      .bottom-btn {
         margin-left: 7px;
         background-color: white;
         color: rgb(128, 128, 128);
-        border: 1px solid rgb(160, 160, 160) ;
-        &:hover{
-          border: 1px solid $colorBlack ;
+        border: 1px solid rgb(160, 160, 160);
+        &:hover {
+          border: 1px solid $colorBlack;
         }
       }
-
-
     }
-    padding: 0px 50px;
     display: flex;
     flex-direction: column;
     .right-column-blog-box {
@@ -185,7 +185,7 @@ $colorBlack: #121619;
               text-decoration: underline;
               cursor: pointer;
               font-size: 12px;
-              transition: .4s;
+              transition: 0.4s;
               &:hover {
                 color: black;
               }
