--- a/assets/css/blog-page-css/blog.css
+++ b/assets/css/blog-page-css/blog.css
@@ -31,10 +31,12 @@
   justify-content: center;
 }
 .main-section .main-section-left-column {
-  width: 350px;
+  display: flex;
+  flex-direction: column;
+  margin-right: 30px;
 }
 .main-section .main-section-left-column h2 {
-  font-size: 22px;
+  font-size: 18px;
 }
 .main-section .main-section-left-column .left-column-input {
   position: relative;
@@ -60,7 +62,7 @@
   padding: 20px 0px;
   color: gray;
   font-size: 13px;
-  width: 20%;
+  width: 170px;
   cursor: pointer;
   border-top: 1px solid rgb(210, 210, 210);
   transition: 0.5s all;
@@ -124,7 +126,6 @@
   color: white;
 }
 .main-section .main-section-right-column {
-  width: 900px;
   display: flex;
   flex-direction: column;
 }
@@ -171,6 +172,7 @@
 .main-section .main-section-right-column .right-column-blog-box .writer-comment .writer-comment-spans {
   display: flex;
   flex-direction: column;
+  width: 880px;
 }
 .main-section .main-section-right-column .right-column-blog-box .writer-comment .writer-comment-spans span {
   color: rgb(160, 160, 160);
@@ -186,4 +188,136 @@
 }
 .main-section .main-section-right-column .right-column-blog-box .writer-comment .writer-comment-spans span:nth-child(2):hover {
   color: black;
-}/*# sourceMappingURL=blog.css.map */
+}
+
+/*#region Blog-Responsive*/
+@media only screen and (max-width: 1280px) {
+  .main-section .main-section-right-column .right-column-blog-box img {
+    width: 800px;
+  }
+  .main-section .main-section-right-column .right-column-blog-box .writer-comment .writer-comment-spans {
+    width: 800px;
+  }
+}
+@media only screen and (max-width: 1180px) {
+  .main-section .main-section-right-column .right-column-blog-box img {
+    width: 700px;
+  }
+  .main-section .main-section-right-column .right-column-blog-box .writer-comment h1 {
+    font-size: 22px;
+  }
+  .main-section .main-section-right-column .right-column-blog-box .writer-comment .writer-comment-spans {
+    width: 700px;
+  }
+}
+@media only screen and (max-width: 1080px) {
+  .main-section .main-section-right-column .right-column-blog-box img {
+    width: 620px;
+  }
+  .main-section .main-section-right-column .right-column-blog-box .writer-comment h1 {
+    font-size: 20px;
+  }
+  .main-section .main-section-right-column .right-column-blog-box .writer-comment .writer-comment-spans {
+    width: 620px;
+  }
+}
+@media only screen and (max-width: 950px) {
+  .main-section .main-section-right-column .right-column-blog-box img {
+    width: 520px;
+  }
+  .main-section .main-section-right-column .right-column-blog-box .writer-comment h1 {
+    font-size: 17px;
+  }
+  .main-section .main-section-right-column .right-column-blog-box .writer-comment .writer-comment-spans {
+    width: 520px;
+  }
+}
+@media only screen and (max-width: 860px) {
+  .main-section .main-section-right-column .right-column-blog-box img {
+    width: 480px;
+  }
+  .main-section .main-section-right-column .right-column-blog-box .writer-comment h1 {
+    font-size: 14px;
+  }
+  .main-section .main-section-right-column .right-column-blog-box .writer-comment .writer-comment-spans {
+    width: 480px;
+  }
+}
+@media only screen and (max-width: 800px) {
+  .main-section {
+    flex-direction: column-reverse;
+  }
+  .main-section .main-section-right-column {
+    align-items: center;
+  }
+  .main-section .main-section-right-column .right-column-blog-box img {
+    width: 600px;
+  }
+  .main-section .main-section-right-column .right-column-blog-box .writer-comment h1 {
+    font-size: 18px;
+  }
+  .main-section .main-section-right-column .right-column-blog-box .writer-comment .writer-comment-spans {
+    width: 600px;
+  }
+}
+@media only screen and (max-width: 615px) {
+  .main-section {
+    flex-direction: column-reverse;
+  }
+  .main-section .main-section-right-column {
+    align-items: center;
+  }
+  .main-section .main-section-right-column .right-column-blog-box img {
+    width: 520px;
+  }
+  .main-section .main-section-right-column .right-column-blog-box .writer-text span {
+    font-size: 11px;
+  }
+  .main-section .main-section-right-column .right-column-blog-box .writer-comment h1 {
+    font-size: 15px;
+  }
+  .main-section .main-section-right-column .right-column-blog-box .writer-comment .writer-comment-spans {
+    width: 520px;
+  }
+}
+@media only screen and (max-width: 530px) {
+  .main-section {
+    flex-direction: column-reverse;
+  }
+  .main-section .main-section-right-column {
+    align-items: center;
+  }
+  .main-section .main-section-right-column .right-column-blog-box img {
+    width: 450px;
+  }
+  .main-section .main-section-right-column .right-column-blog-box .writer-comment h1 {
+    font-size: 14px;
+  }
+  .main-section .main-section-right-column .right-column-blog-box .writer-comment .writer-comment-spans {
+    width: 450px;
+  }
+  .main-section .main-section-right-column .right-column-blog-box .writer-comment .writer-comment-spans span {
+    font-size: 12px;
+  }
+}
+@media only screen and (max-width: 460px) {
+  .main-section {
+    flex-direction: column-reverse;
+  }
+  .main-section .main-section-right-column {
+    align-items: center;
+  }
+  .main-section .main-section-right-column .right-column-blog-box img {
+    width: 320px;
+  }
+  .main-section .main-section-right-column .right-column-blog-box .writer-comment h1 {
+    font-size: 11px;
+  }
+  .main-section .main-section-right-column .right-column-blog-box .writer-comment .writer-comment-spans {
+    width: 320px;
+  }
+  .main-section .main-section-right-column .right-column-blog-box .writer-comment .writer-comment-spans span {
+    font-size: 10px;
+  }
+}
+/*#endregion *//*# sourceMappingURL=blog.css.map */
